# gpt-web-crawler

./: .gitignore  LICENSE  MANIFEST.in  README-Zh.md  README.MD  README.md  config_template.py  craw_single_page.py  example.py  main.py  pyproject.toml  recurrent_get_url.py  requirements.txt  server.py  start.ipynb
gpt_web_crawler/: __init__.py  main.py
gpt_web_crawler/webcrawer/: __init__.py  openai_extract.py  pipelines.py  settings.py
gpt_web_crawler/webcrawer/spiders/: Cat.py  Lion.py  Noob.py  Pro.py  __init__.py
gpt_web_crawler/webcrawer/tools/: screenshot.js
sites/: leadong.txt
templates/: api_docs.html
utils/: file_info.py  file_server.py
utils/crawer/: __init__.py  client_test.py  craw_single_page.py  get_screenshot.py  openai_extract.py  recurrent_get_url.py  selenium_get_page.py  server.py  sitemap_phar.py  travel_sitemap.py
utils/crawer/Reference/: AI_Proc_Web.ipynb  openai-web-qa.ipynb  test_openai.ipynb
utils/file_process/: file_fold_info.py  file_info.py  file_server.py
utils/webcrawer/: scrapy.cfg
utils/webcrawer/webcrawer/: items.py  middlewares.py  pipelines.py  settings.py
utils/webcrawer/webcrawer/spiders/: Cat.py  Lion.py  Noob.py  Pro.py  example.py
